feat: Implement checkout flow with Stripe integration
- Added CheckoutPage component for handling checkout process.
- Created CheckoutReturnPage to verify payment status after checkout.
- Implemented API routes for session status and checkout URL generation.
- Integrated Stripe for payment processing, including coupon handling.
- Added error handling and user feedback for payment status.
- Created EmbeddedCheckoutModal for Stripe's embedded checkout experience.
- Updated environment configuration to include Stripe keys.
- Added necessary dependencies for Stripe integration.

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -25,3 +25,6 @@ E_CLASS_CMS_REST_URL="http://localhost:5173"
 S3_HOSTNAME="localhost"
 S3_PORT="9000"
 S3_PROTOCOL="http"
+
+STRIPE_SECRET_KEY="sk_test_your_test_key_here"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_your_test_key_here"
