--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@dream-aim-deliver/dad-cats": "^0.13.0",
     "@dream-aim-deliver/e-class-cms-rest": "3.0.2",
     "@mux/mux-player-react": "^3.3.0",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.2.0",
     "@tailwindcss/postcss": "4.0.0-beta.8",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
@@ -33,6 +35,7 @@
     "react-dom": "19.0.0",
     "server": "link:@trpc/next-layout/server",
     "spark-md5": "^3.0.2",
+    "stripe": "^19.2.0",
     "superjson": "^2.2.2",
     "tailwindcss": "4.0.0-beta.8",
     "zod": "^3.24.1"
